--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,7 +2,7 @@
 <html ng-app="imageMarker">
     <head>
         <script type="text/javascript" src="angular.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="clientapp.js"></script>
     </head>
     <style type="text/css">
     </style>
