--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -3,8 +3,14 @@
     <head>
         <script type="text/javascript" src="angular.js"></script>
         <script type="text/javascript" src="clientapp.js"></script>
+        <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
+
     </head>
     <style type="text/css">
+        #container {
+            width:600px;
+            margin: auto;
+        }
         button {
             overflow: hidden;
             margin: 0;
@@ -29,14 +35,38 @@
             display: inline-block;
             border: 1px dashed black;
         }
+
+        #buttons {
+            margin: 10px;
+
+        }
+
+        .time {
+            margin-left: 10px;
+            display: inline-block;
+        }
+
     </style>
     <body>
-        <div ng-controller="ImageListCtrl">
-            
-            <button type=button tabindex=3 ng-show="metadata.isWatch" ng-click="markWatch(image, false)">Not a watch</button>
-            <button type=button tabindex=3 ng-show="!metadata.isWatch" ng-click="markWatch(image, true)">Is a watch</button>
-            <button type=button tabindex=2 ng-click="goPrevious()">Prev</button>
-            <button type=button tabindex=1 ng-click="goNext()">Next</button>
+        <div ng-controller="ImageListCtrl" id="container">
+
+            <div id = 'buttons'>
+                <button type=button tabindex=3 ng-show="metadata.isWatch" ng-click="markWatch(image, false)">Not a watch</button>
+                <button type=button tabindex=3 ng-show="!metadata.isWatch" ng-click="markWatch(image, true)">Is a watch</button>
+                <button type=button tabindex=2 ng-click="goPrevious()">Prev</button>
+                <button type=button tabindex=1 ng-click="goNext()">Next</button>
+
+               <span class= 'time'>
+
+                   hour <select id='hour'> </select>
+                   min  <select id='min'> </select>
+                   sec  <select id='sec'> </select>
+
+               </span>
+
+            </div>
+
+
             <br>
             Image: {{image}}
             <br>
@@ -49,6 +79,29 @@
             <br>
             <p ng-show="prefix.length">Showing images with prefix {{prefix}}</p>
             <p ng-show="!prefix || !prefix.length">Showing all images</p>
+
         </div>
+
+        <script>
+
+            var hour = $('#hour');
+            var min  = $('#min');
+            var sec  = $('#sec');
+
+            for (var i = 1; i <= 12; i++) {
+                hour.append('<option value="'+ i +'">'+  i+'</option>');
+                min.append('<option value="'+ i +'">'+  i+'</option>');
+            }
+
+            for (var j = 1; j <= 60; j++) {
+                sec.append('<option value="'+ j +'">'+  j+'</option>');
+            }
+
+            $('option[value=10]').each(function(val, el) {
+                $(el).attr('selected', 'selected')
+            })
+
+        </script>
+
     </body>
 </html>
