--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -44,6 +44,19 @@
             <button type=button tabindex=3 ng-show="!metadata.isWatch" ng-click="markWatch(image, true)">Is a watch</button>
             <button type=button tabindex=2 ng-click="goPrevious()">Prev</button>
             <button type=button tabindex=1 ng-click="goNext()">Next</button>
+
+            <br>
+
+            <label>Hours:
+                <select ng-options="h for h in hours" ng-change="saveMetadata()" ng-model="metadata.hours"></select>
+            </label>
+            <label>Minutes:
+                <select ng-options="m for m in minutes" ng-change="saveMetadata()" ng-model="metadata.minutes"></select>
+            </label>
+            <label>Seconds:
+                <select ng-options="s for s in seconds" ng-change="saveMetadata()" ng-model="metadata.seconds"></select>
+            </label>
+
             <br>
             Image: {{image}}
             <br>
@@ -53,6 +66,7 @@
                     ng-style="{ left: metadata.crop.topLeft.x + 'px', top: metadata.crop.topLeft.y + 'px', height: metadata.crop.height + 'px', width: metadata.crop.width + 'px' }"></div>
                 <img id="theimage" src="{{image}}" draggable="false" ng-show="loaded()">
             </div>
+
             <br>
             <p ng-show="prefix.length">Showing images with prefix {{prefix}}</p>
             <p ng-show="!prefix || !prefix.length">Showing all images</p>
